refactor: code base now uses DPS (#1146)
* remove provider dataplane proxy

* remove old edr api

* re-enable callbacks

* introduce fixtures module

* introduce fixtures module

* introduce controlplane test modules

* http pull transfer w/ signaling

* split tests

* fix negotiate edr test

* get http push to work

* rename edr-test edr-api-test

* added policy tests

* cleanup

* transfer type in SSI/DIM/IATP tests

* iatp test

* fix DIM tests

* add legacy SSI tests

* compile errors

* DEPENDENCIES

* add SQL migration for DataAddress change

* temporarily made DIM and TokenRefresh config optional

* fix MIW e2e tests