@@ -24,10 +24,8 @@ import org.eclipse.edc.connector.dataplane.selector.spi.DataPlaneSelectorService
 import org.eclipse.edc.spi.EdcException;
 import org.eclipse.edc.spi.monitor.Monitor;
 import org.eclipse.edc.spi.system.ServiceExtensionContext;
-import org.eclipse.edc.spi.system.configuration.Config;
 import org.eclipse.edc.spi.system.configuration.ConfigFactory;
 import org.eclipse.edc.spi.types.domain.DataAddress;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtensionContext;
@@ -35,11 +33,26 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.ArgumentsProvider;
 import org.junit.jupiter.params.provider.ArgumentsSource;
-import org.mockito.Mockito;
 
 import java.util.HashMap;
 import java.util.Map;
 import java.util.stream.Stream;
+
+import static org.eclipse.tractusx.edc.dataplane.selector.configuration.DataPlaneSelectorConfigurationServiceExtension.CONFIG_PREFIX;
+import static org.eclipse.tractusx.edc.dataplane.selector.configuration.DataPlaneSelectorConfigurationServiceExtension.DESTINATION_TYPES_SUFFIX;
+import static org.eclipse.tractusx.edc.dataplane.selector.configuration.DataPlaneSelectorConfigurationServiceExtension.PROPERTIES_SUFFIX;
+import static org.eclipse.tractusx.edc.dataplane.selector.configuration.DataPlaneSelectorConfigurationServiceExtension.PUBLIC_API_URL_PROPERTY;
+import static org.eclipse.tractusx.edc.dataplane.selector.configuration.DataPlaneSelectorConfigurationServiceExtension.SOURCE_TYPES_SUFFIX;
+import static org.eclipse.tractusx.edc.dataplane.selector.configuration.DataPlaneSelectorConfigurationServiceExtension.URL_SUFFIX;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.anyString;
+import static org.mockito.Mockito.argThat;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 class DataPlaneSelectorConfigurationServiceExtensionTest {
     private static final String S3_BUCKET = "s3-bucket";
@@ -48,47 +61,81 @@ class DataPlaneSelectorConfigurationServiceExtensionTest {
 
     private static final String DATA_PLANE_INSTANCE_ID = "test-plane";
     private static final String DATA_PLANE_INSTANCE_URL = "http://127.0.0.1:8080/test";
-    private static final String DATA_PLANE_INSTANCE_SOURCE_TYPES =
-            String.format("%s, %s", S3_BUCKET, BLOB_STORAGE);
+    private static final String DATA_PLANE_INSTANCE_SOURCE_TYPES = "%s, %s".formatted(S3_BUCKET, BLOB_STORAGE);
     private static final String DATA_PLANE_INSTANCE_DESTINATION_TYPES = LOCAL_FILE_SYSTEM;
 
-    private static final String URL_KEY =
-            String.format(
-                    "%s.%s",
-                    DATA_PLANE_INSTANCE_ID, DataPlaneSelectorConfigurationServiceExtension.URL_SUFFIX);
-    private static final String SOURCE_TYPES_KEY =
-            String.format(
-                    "%s.%s",
-                    DATA_PLANE_INSTANCE_ID,
-                    DataPlaneSelectorConfigurationServiceExtension.SOURCE_TYPES_SUFFIX);
-    private static final String DESTINATION_TYPES_KEY =
-            String.format(
-                    "%s.%s",
-                    DATA_PLANE_INSTANCE_ID,
-                    DataPlaneSelectorConfigurationServiceExtension.DESTINATION_TYPES_SUFFIX);
-    private static final String PROPERTIES_KEY =
-            String.format(
-                    "%s.%s",
-                    DATA_PLANE_INSTANCE_ID, DataPlaneSelectorConfigurationServiceExtension.PROPERTIES_SUFFIX);
-
+    private static final String URL_KEY = "%s.%s".formatted(DATA_PLANE_INSTANCE_ID, URL_SUFFIX);
+    private static final String SOURCE_TYPES_KEY = "%s.%s".formatted(DATA_PLANE_INSTANCE_ID, SOURCE_TYPES_SUFFIX);
+    private static final String DESTINATION_TYPES_KEY = "%s.%s".formatted(DATA_PLANE_INSTANCE_ID, DESTINATION_TYPES_SUFFIX);
+    private static final String PROPERTIES_KEY = "%s.%s".formatted(DATA_PLANE_INSTANCE_ID, PROPERTIES_SUFFIX);
+    private final ServiceExtensionContext serviceExtensionContext = mock();
+    private final DataPlaneSelectorService dataPlaneSelectorService = mock();
+    private final Monitor monitor = mock();
     private DataPlaneSelectorConfigurationServiceExtension extension;
-
-    // mocks
-    private ServiceExtensionContext serviceExtensionContext;
-    private DataPlaneSelectorService dataPlaneSelectorService;
-    private Monitor monitor;
 
     @BeforeEach
     void setup() {
         extension = new DataPlaneSelectorConfigurationServiceExtension();
 
-        serviceExtensionContext = Mockito.mock(ServiceExtensionContext.class);
-        dataPlaneSelectorService = Mockito.mock(DataPlaneSelectorService.class);
-        monitor = Mockito.mock(Monitor.class);
-
-        Mockito.when(serviceExtensionContext.getService(DataPlaneSelectorService.class))
+        when(serviceExtensionContext.getService(DataPlaneSelectorService.class))
                 .thenReturn(dataPlaneSelectorService);
-        Mockito.when(serviceExtensionContext.getMonitor()).thenReturn(monitor);
+        when(serviceExtensionContext.getMonitor()).thenReturn(monitor);
+    }
+
+    @Test
+    void testName() {
+        var extension = new DataPlaneSelectorConfigurationServiceExtension();
+
+        assertNotNull(extension.name());
+        assertEquals("Data Plane Selector Configuration Extension", extension.name());
+    }
+
+    @Test
+    void testInitialize() {
+
+        var config = ConfigFactory.fromMap(getConfig());
+        when(serviceExtensionContext.getConfig("edc.dataplane.selector")).thenReturn(config);
+        extension.initialize(serviceExtensionContext);
+
+        verify(serviceExtensionContext, times(1)).getService(DataPlaneSelectorService.class);
+        verify(serviceExtensionContext, times(1)).getMonitor();
+        when(serviceExtensionContext.getConfig(CONFIG_PREFIX))
+                .thenReturn(config);
+
+        verify(dataPlaneSelectorService, times(1))
+                .addInstance(argThat(dataPlaneInstance -> {
+                    var s3Source = DataAddress.Builder.newInstance().type(S3_BUCKET).build();
+                    var blobSource = DataAddress.Builder.newInstance().type(BLOB_STORAGE).build();
+                    var fsSink = DataAddress.Builder.newInstance().type(LOCAL_FILE_SYSTEM).build();
+
+                    return dataPlaneInstance.getId().equals(DATA_PLANE_INSTANCE_ID) &&
+                            dataPlaneInstance.getUrl().toString().equals(DATA_PLANE_INSTANCE_URL) &&
+                            dataPlaneInstance.canHandle(s3Source, fsSink) &&
+                            dataPlaneInstance.canHandle(blobSource, fsSink);
+                }));
+    }
+
+    @ParameterizedTest
+    @ArgumentsSource(MissingConfigArgumentsProvider.class)
+    void testWarningOnPropertyMissing(String configKey, String configValue) {
+        var configMap = getConfig();
+        configMap.put(configKey, configValue);
+        var config = ConfigFactory.fromMap(configMap);
+        when(serviceExtensionContext.getConfig(CONFIG_PREFIX)).thenReturn(config);
+        extension.initialize(serviceExtensionContext);
+
+        // one warning config missing, one warning data plane instance skipped
+        verify(monitor, times(3)).warning(anyString());
+    }
+
+    @Test
+    void throwsExceptionOnPropertiesNoJson() {
+        var configMap = getConfig();
+        configMap.put(PROPERTIES_KEY, "no json");
+        var config = ConfigFactory.fromMap(configMap);
+        when(serviceExtensionContext.getConfig(CONFIG_PREFIX)).thenReturn(config);
+
+        assertThrows(EdcException.class, () -> extension.initialize(serviceExtensionContext));
     }
 
     private Map<String, String> getConfig() {
@@ -97,123 +144,9 @@ class DataPlaneSelectorConfigurationServiceExtensionTest {
                 put(URL_KEY, DATA_PLANE_INSTANCE_URL);
                 put(SOURCE_TYPES_KEY, DATA_PLANE_INSTANCE_SOURCE_TYPES);
                 put(DESTINATION_TYPES_KEY, DATA_PLANE_INSTANCE_DESTINATION_TYPES);
-                put(
-                        PROPERTIES_KEY,
-                        String.format(
-                                "{ \"%s\": \"%s\" }",
-                                DataPlaneSelectorConfigurationServiceExtension.PUBLIC_API_URL_PROPERTY,
-                                DATA_PLANE_INSTANCE_URL));
+                put(PROPERTIES_KEY, "{ \"%s\": \"%s\" }".formatted(PUBLIC_API_URL_PROPERTY, DATA_PLANE_INSTANCE_URL));
             }
         };
-    }
-
-    @Test
-    void testName() {
-        final DataPlaneSelectorConfigurationServiceExtension extension =
-                new DataPlaneSelectorConfigurationServiceExtension();
-
-        Assertions.assertNotNull(extension.name());
-        Assertions.assertEquals("Data Plane Selector Configuration Extension", extension.name());
-    }
-
-    @Test
-    void testInitialize() {
-
-        final Config config = ConfigFactory.fromMap(getConfig());
-
-        Mockito.when(serviceExtensionContext.getConfig("edc.dataplane.selector")).thenReturn(config);
-
-        extension.initialize(serviceExtensionContext);
-
-        Mockito.verify(serviceExtensionContext, Mockito.times(1))
-                .getService(DataPlaneSelectorService.class);
-        Mockito.verify(serviceExtensionContext, Mockito.times(1)).getMonitor();
-        Mockito.when(
-                        serviceExtensionContext.getConfig(
-                                DataPlaneSelectorConfigurationServiceExtension.CONFIG_PREFIX))
-                .thenReturn(config);
-
-        Mockito.verify(dataPlaneSelectorService, Mockito.times(1))
-                .addInstance(
-                        Mockito.argThat(
-                                dataPlaneInstance -> {
-                                    final DataAddress s3Source =
-                                            DataAddress.Builder.newInstance().type(S3_BUCKET).build();
-                                    final DataAddress blobSource =
-                                            DataAddress.Builder.newInstance().type(BLOB_STORAGE).build();
-                                    final DataAddress fsSink =
-                                            DataAddress.Builder.newInstance().type(LOCAL_FILE_SYSTEM).build();
-
-                                    final boolean matchingId =
-                                            dataPlaneInstance.getId().equals(DATA_PLANE_INSTANCE_ID);
-                                    final boolean matchingUrl =
-                                            dataPlaneInstance.getUrl().toString().equals(DATA_PLANE_INSTANCE_URL);
-                                    final boolean matchingCanHandleS3ToFileSystem =
-                                            dataPlaneInstance.canHandle(s3Source, fsSink);
-                                    final boolean matchingCanHandleBlobToFileSystem =
-                                            dataPlaneInstance.canHandle(blobSource, fsSink);
-
-                                    if (!matchingId) {
-                                        System.err.printf(
-                                                "Expected ID %s, but got %s%n",
-                                                DATA_PLANE_INSTANCE_ID, dataPlaneInstance.getId());
-                                    }
-                                    if (!matchingUrl) {
-                                        System.err.printf(
-                                                "Expected URL %s, but got %s%n",
-                                                DATA_PLANE_INSTANCE_URL, dataPlaneInstance.getUrl());
-                                    }
-                                    if (!matchingCanHandleS3ToFileSystem) {
-                                        System.err.printf(
-                                                "Expected Instance to be handle source %s and sink %s%n",
-                                                S3_BUCKET, LOCAL_FILE_SYSTEM);
-                                    }
-                                    if (!matchingCanHandleBlobToFileSystem) {
-                                        System.err.printf(
-                                                "Expected Instance to be handle source %s and sink %s%n",
-                                                BLOB_STORAGE, LOCAL_FILE_SYSTEM);
-                                    }
-
-                                    return matchingId &&
-                                            matchingUrl &&
-                                            matchingCanHandleS3ToFileSystem &&
-                                            matchingCanHandleBlobToFileSystem;
-                                }));
-    }
-
-    @ParameterizedTest
-    @ArgumentsSource(MissingConfigArgumentsProvider.class)
-    void testWarningOnPropertyMissing(String configKey, String configValue) {
-        Map<String, String> configMap = getConfig();
-        configMap.put(configKey, configValue);
-
-        final Config config = ConfigFactory.fromMap(configMap);
-
-        Mockito.when(
-                        serviceExtensionContext.getConfig(
-                                DataPlaneSelectorConfigurationServiceExtension.CONFIG_PREFIX))
-                .thenReturn(config);
-
-        extension.initialize(serviceExtensionContext);
-
-        // one warning config missing, one warning data plane instance skipped
-        Mockito.verify(monitor, Mockito.times(2)).warning(Mockito.anyString());
-    }
-
-    @Test
-    void throwsExceptionOnPropertiesNoJson() {
-        Map<String, String> configMap = getConfig();
-        configMap.put(PROPERTIES_KEY, "no json");
-
-        final Config config = ConfigFactory.fromMap(configMap);
-
-        Mockito.when(
-                        serviceExtensionContext.getConfig(
-                                DataPlaneSelectorConfigurationServiceExtension.CONFIG_PREFIX))
-                .thenReturn(config);
-
-        Assertions.assertThrows(
-                EdcException.class, () -> extension.initialize(serviceExtensionContext));
     }
 
     private static class MissingConfigArgumentsProvider implements ArgumentsProvider {
